--- a/ios/Podfile
+++ b/ios/Podfile
@@ -23,8 +23,7 @@ def flutter_root
   raise "FLUTTER_ROOT not found in #{generated_xcode_build_settings_path}. Try deleting Generated.xcconfig, then run flutter pub get"
 end
 
-require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_root)
-
+require File.expand_path(File.join('packages', 'flutter_tools', 'bin', 'podhelper'), flutter_r
 flutter_ios_podfile_setup
 
 target 'Runner' do
